RESOLVED FIXED129652
Subpixel rendering: Incorrect repaint rect cuts off content's right edge after move.
https://bugs.webkit.org/show_bug.cgi?id=129652
Summary Subpixel rendering: Incorrect repaint rect cuts off content's right edge afte...
alan
Reported 2014-03-03 19:50:00 PST
<html> <head> <style> div { position: fixed; border: red solid 0.5px; width: 20px; height: 20px; left: 0.1px; top: 0px; } </style> </head> <body> <div id=foo></div> <script> pos = 0.3; function move() { document.getElementById("foo").style.left = pos; } setTimeout(move,500); </script> </body> </html>
Attachments
test (328 bytes, text/html)
2014-03-03 19:50 PST, alan
no flags
Patch (7.19 KB, patch)
2014-03-03 20:15 PST, alan
no flags
alan
Comment 1 2014-03-03 19:50:23 PST
alan
Comment 2 2014-03-03 20:15:41 PST
WebKit Commit Bot
Comment 3 2014-03-04 08:12:06 PST
Comment on attachment 225734 [details] Patch Clearing flags on attachment: 225734 Committed r165050: <http://trac.webkit.org/changeset/165050>
WebKit Commit Bot
Comment 4 2014-03-04 08:12:08 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.