Subpixel rendering: Incorrect repaint rect cuts off content's right edge after move. https://bugs.webkit.org/show_bug.cgi?id=129652

Reviewed by Simon Fraser.

When repaint rect is adjusted in order to take the distance from renderer into account,
the accumulated fraction value need to be added too. This is always a positive value.

Source/WebCore:

Test: fast/borders/hidpi-border-clipping-right-after-move.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::setContentsNeedDisplayInRect):

LayoutTests:

* fast/borders/hidpi-border-clipping-right-after-move-expected.html: Added.
* fast/borders/hidpi-border-clipping-right-after-move.html: Added.


Canonical link: https://commits.webkit.org/147716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165050 268f45cc-cd09-0410-ab3c-d52691b4dbfc